--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for WallmountedBatteries
 
+1.4.2 - Fixed up the textures a bit.
+Used DeepL to update translations for ChineseSimplified, French, German, Russian
+
+
 1.4.1 - Mod updated for 1.4 and passed autotests
 
 
